--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
 </style>
 <head><div layout:fragment="metadata" th:remove="tag">
-    <title>Lunchline | Home</title>
+    <title>tLunchline | Home</title>
 </div></head>
 
 <!-- layout::fragment="content" is heart of ThymeLeaf layout -->
