--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
             <div class="col-lg-6">
                 <div class="p-5 mt-4">
                     <div class="wrapper-title" style="padding-top: 70px">
-                        <h1 class="display-4">LunchLine</h1>
+                        <h1 class="display-4">tttLunchLine</h1>
                         <p class="lead">Modern online ordering solution for contemporary school lunch systems</p>
                     </div>
                 </div>
